Fixed example npm module reference to new name

--- a/examples/login/package.json
+++ b/examples/login/package.json
@@ -5,6 +5,6 @@
     "express": "2.x.x",
     "ejs": ">= 0.0.0",
     "passport": ">= 0.0.0",
-    "passport-strava": ">= 0.0.0"
+    "passport-strava-oauth2": ">= 0.1.1"
   }
 }
